# base_pico

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
lib/core/: CMakeLists.txt  assertion.hpp  board-config.cpp  board-config.hpp  error-context.hpp  errors.cpp  errors.hpp  gpio-declarations.hpp  gpio.cpp  gpio.hpp  logger.hpp  packed-datetime.cpp  packed-datetime.hpp  product-info.hpp  random.hpp  serial-comm.cpp  serial-comm.hpp  utilities.cpp  utilities.hpp
lib/devices/: CMakeLists.txt  ads1113-definitions.hpp  ads1113.cpp  ads1113.hpp  ads1114-definitions.hpp  ads1115-config.hpp  ads1115-declarations.hpp  ads1115-definitions.hpp  ads1115.cpp  ads1115.hpp  ads111x-definitions.hpp  ads111x.cpp  ads111x.hpp  component.hpp  csi2c.cpp  csi2c.hpp  dac-channel.hpp  dac-declarations.hpp  devicesContainer.hpp  external-thermistor.cpp  external-thermistor.hpp  mcp-24lc32.cpp  mcp-24lc32.hpp  mcp-eeprom-declarations.hpp  mcp4725.cpp  mcp4725.hpp  mcp4728.cpp  mcp4728.hpp  pico-adc.cpp  pico-adc.hpp  pico-internal-temp-sensor.cpp  pico-internal-temp-sensor.hpp
lib/drivers/: CMakeLists.txt  adc.hpp  adc1113.hpp  board-config.hpp  board-init.hpp  board_config.hpp  component.hpp  csi2c.cpp  csi2c.hpp  dac.hpp  driversContainer.hpp  eeprom0-page-declarations.hpp  eeprom0.cpp  eeprom0.hpp  gpio-declarations.hpp  gpio.cpp  gpio.hpp
lib/tests/: CMakeLists.txt  assertion.hpp  test.cpp  test.hpp
lib/utils/: CMakeLists.txt  command-declarations.hpp  command-handler.cpp  command-handler.hpp  commands.cpp  commands.hpp  communication.cpp  communication.hpp  logger.cpp  logger.hpp  packed-datetime.cpp  packed-datetime.hpp  product-info.hpp  tusb_config.h  utilities.cpp  utilities.hpp
src/: CMakeLists.txt  main.cpp  worker.cpp  worker.hpp
